@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2021, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -123,7 +123,7 @@ public class JvmtiTest {
             for (int i = iterations; i > 0; --i) {
                 List<Integer> list = new ArrayList<Integer>();
                 for (int j = 10000; j > 0; --j) {
-                    list.add(new Integer(j));
+                    list.add(Integer.valueOf(j));
                 }
                 Collections.sort(list);
             }
